<!--
  ~ Copyright 2018
  ~ Kollins Lima (kollins.lima@gmail.com)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">SOFIA</string>
    <string name="project_name">Project SOFIA</string>

    <string name="simulated_time_format">%d.%06d s</string>

    <string name="hex_file_read_fail">Fail to read program</string>
    <!--<string name="hex_file_read_fail_instructions">Load a .hex file and reset system</string>-->
    <string name="hex_file_read_fail_instructions">Load a .hex file</string>

    <string name="running">Running</string>
    <string name="paused">Paused</string>
    <string name="reset">Reset</string>
    <!--<string name="short_circuit">SHORT CIRCUIT!!! - Reset system</string>-->
    <string name="short_circuit">SHORT CIRCUIT!</string>

    <string name="outputSection_fragment">Output</string>
    <string name="inputSection_fragment">Input</string>
    
    <plurals name="number_selected">
        <item quantity="one">%d Selected</item>
        <item quantity="other">%d Selected</item>
    </plurals>

    <string-array name="ledText">
        <item>Off</item>
        <item>On</item>
        <item>Hi-Z</item>
    </string-array>

    <string name="buttonOn">On</string>
    <string name="buttonOff">Off</string>

    <string name="inputHint">Pin X</string>

    <string-array name="inputModes">
        <item>Push-GND</item>
        <item>Push-VDD</item>
        <item>Pull-up</item>
        <item>Pull-down</item>
        <item>Toggle</item>
    </string-array>

    <!--Arduino model to uC-->
    <string name="UNO">ATmega328P</string>

    <!--Pins of model-->
    <string-array
        name="UNO_pins">
        <item>Pin0</item>
        <item>Pin1</item>
        <item>Pin2</item>
        <item>Pin3</item>
        <item>Pin4</item>
        <item>Pin5</item>
        <item>Pin6</item>
        <item>Pin7</item>
        <item>Pin8</item>
        <item>Pin9</item>
        <item>Pin10</item>
        <item>Pin11</item>
        <item>Pin12</item>
        <item>Pin13</item>
        <item>A0</item>
        <item>A1</item>
        <item>A2</item>
        <item>A3</item>
        <item>A4</item>
        <item>A5</item>
    </string-array>


    <string name="action_reset">Reset</string>
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>

    <string name="action_output">Output</string>
    <string name="action_anal_input">Analog Input</string>
    <string name="action_input">Digital Input</string>
    <string name="action_clear_io">Clear I/O</string>
    <string name="action_import">Import code</string>
    <string name="action_about">About</string>
    <string name="start_instructions">Tap \'+\' to start</string>

    <string name="developer">Developed by:</string>
    <string name="developer_name">Kollins Gabriel Lima</string>
    <string name="project_info">Find out more at SOFIA\'s project page</string>
    <string name="project_page"> <a href="https://project-sofia.gitbook.io/project/">https://project-sofia.gitbook.io/project/</a></string>
    <string name="address">Adr.</string>
    <string name="bit7">7</string>
    <string name="bit6">6</string>
    <string name="bit5">5</string>
    <string name="bit4">4</string>
    <string name="bit3">3</string>
    <string name="bit2">2</string>
    <string name="bit1">1</string>
    <string name="bit0">0</string>
    <string name="action_memory_map">Memory</string>

    <string name="seach_mem_map">Search</string>
    <string name="action_meter">Meter</string>
    <string name="serial_monitor_title">Serial Monitor</string>
    <string name="action_adc_adjust">AREF Config</string>
    <string name="AREF_value_hint">AREF (Volts)</string>
    <string name="adc_cancel">Cancel</string>
    <string name="AREF_current">Current AREF (V)</string>
    <string name="arefError">Enter a positive value between 1 and 5</string>
    <string name="developer_email">kollins.lima@gmail.com</string>
    <string name="action_help">Help</string>
    <string name="app_version">v1.11.1</string>
    <string name="action_report_bug">Report a Bug</string>
    <string name="action_memory_map_error">Please start simulation first.</string>
    <string name="filemanager_not_found">Please install a File Manager.</string>
    <string name="not_hex_error">Error: Not a .hex file</string>
    <string name="fail_to_load_file">Error: Fail to load file</string>
    <string name="fail_to_start_simulation">Error: Fail to start simulation</string>
    <string name="action_play_pause">Play/Pause</string>
    <string name="action_settings">Settings</string>

    <string name="settings_platform">Platform</string>
    <string name="settings_default_platform">Arduino UNO</string>
    <string name="settings_start_paused">Start paused</string>

</resources>
