<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018
  ~ Kollins Lima (kollins.lima@gmail.com)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_reset"
        android:icon="@drawable/ic_action_reset"
        android:title="@string/action_reset"
        app:showAsAction="always"/>

    <item android:id="@+id/action_add"
        android:icon="@drawable/ic_action_add"
        android:title="@string/action_add"
        app:showAsAction="always"/>

    <item android:id="@+id/action_import"
        android:icon="@drawable/ic_action_import"
        android:title="@string/action_import"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_memory_map"
        android:title="@string/action_memory_map"
        app:showAsAction="never"/>

    <item android:id="@+id/action_adc_adjust"
        android:title="@string/action_adc_adjust"
        app:showAsAction="never"/>

    <item android:id="@+id/action_clear_io"
        android:title="@string/action_clear_io"
        app:showAsAction="never"/>

    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        app:showAsAction="never"/>

    <item android:id="@+id/action_report_bug"
        android:title="@string/action_report_bug"
        app:showAsAction="never"/>

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never"/>

</menu>