<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018
  ~ Kollins Lima (kollins.lima@gmail.com)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <include layout="@layout/include_mem_map_toolbar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/colorPrimaryDark">

                <TextView
                    android:id="@+id/memoryUsageBytes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/memoryUsagePercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/white" />

            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="2"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/address"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/bit7"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/bit6"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/bit5"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/bit4"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/bit3"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/bit2"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/bit1"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/bit0"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/memory_map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />
    </LinearLayout>
</FrameLayout>